--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,7 @@
   --color-bg-input: #d9d9d9;
   --color-bg-start: #2a2c36;
   --color-bg-pages: #656565;
-  --color-bg-modal:#fafafa;
-  
+  --color-bg-modal: #fafafa;
 
   --color-warning: #e74a3b;
   --color-placeholder: #d9d9d9;
@@ -34,14 +33,14 @@
 body {
   margin: 0;
   padding: 16px;
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 h1,
@@ -52,6 +51,12 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-text-2);
 }
 
 ul,
@@ -78,22 +83,22 @@ a {
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: local('Poppins');
-  font-weight: 400, url(./fonts/Poppins/Poppins-Regular.ttf) format('truetype');
+  font-family: "Poppins";
+  src: local("Poppins");
+  font-weight: 400, url(./fonts/Poppins/Poppins-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
 
-  src: local('Poppins'),
-    url(./fonts/Poppins/Poppins-Medium.ttf) format('truetype');
+  src: local("Poppins"),
+    url(./fonts/Poppins/Poppins-Medium.ttf) format("truetype");
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-weight: 600;
-  src: local('Poppins'),
-    url(./fonts/Poppins/Poppins-SemiBold.ttf) format('truetype');
+  src: local("Poppins"),
+    url(./fonts/Poppins/Poppins-SemiBold.ttf) format("truetype");
 }
