Created structure of recipepage

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --color-text-3: #23262a;
   --color-text-4: rgba(0, 0, 0, 0.8);
   --color-text-5: #8baa36;
-  --coloer-text-6: #22252a;
+  --color-text-6: #22252a;
   --color-text-7: #fafafa;
 
   --color-icons-1: #22252a;
